<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/detail_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/detail_user" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/vian_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="81dp" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/TextDetail.Title"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_pic"
        app:layout_constraintTop_toTopOf="@id/guideline_1"
        tools:text="Profile Name" />

    <TextView
        android:id="@+id/tv_detail_username"
        style="@style/TextDetail.Subtitle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="Username" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="164dp" />

    <ImageView
        android:id="@+id/iv_icon_company"
        style="@style/IconDetail"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/icon_company"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_company"
        app:layout_constraintTop_toTopOf="@id/tv_detail_company"
        app:srcCompat="@drawable/ic_outline_company" />

    <TextView
        android:id="@+id/tv_detail_company"
        style="@style/TextDetail.Info"
        android:layout_marginStart="26dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="@+id/iv_profile_pic"
        app:layout_constraintTop_toBottomOf="@id/guideline_2"
        tools:text="Company" />

    <ImageView
        style="@style/IconDetail"
        android:id="@+id/iv_icon_location"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_location"
        app:layout_constraintTop_toTopOf="@id/tv_detail_location"
        app:srcCompat="@drawable/ic_outline_location"
        android:contentDescription="@string/icon_location" />

    <TextView
        android:id="@+id/tv_detail_location"
        style="@style/TextDetail.Info"
        android:layout_marginStart="26dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/iv_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        tools:text="Location" />

    <ImageView
        style="@style/IconDetail"
        android:id="@+id/iv_icon_people"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_follower_count"
        app:layout_constraintTop_toTopOf="@id/tv_detail_follower_count"
        app:srcCompat="@drawable/ic_outline_people"
        android:contentDescription="@string/icon_people" />

    <TextView
        android:id="@+id/tv_detail_follower_count"
        style="@style/TextDetail.Info.Value"
        android:layout_marginStart="26dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="@+id/iv_profile_pic"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_location"
        tools:text="10" />

    <TextView
        style="@style/TextDetail.Info"
        android:id="@+id/tv_follower"
        android:layout_marginStart="6dp"
        android:paddingBottom="8dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_follower_count"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_follower_count"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_follower_count" />

    <TextView
        style="@style/TextDetail.Info.Value"
        android:id="@+id/tv_detail_following_count"
        android:layout_marginStart="6dp"
        android:paddingBottom="8dp"
        tools:text="\u25CF 67"
        app:layout_constraintBottom_toBottomOf="@+id/tv_follower"
        app:layout_constraintStart_toEndOf="@+id/tv_follower"
        app:layout_constraintTop_toTopOf="@+id/tv_follower" />

    <TextView
        style="@style/TextDetail.Info"
        android:id="@+id/tv_following"
        android:layout_marginStart="6dp"
        android:paddingBottom="8dp"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following_count"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_following_count"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_following_count" />

    <ImageView
        style="@style/IconDetail"
        android:id="@+id/iv_icon_repository"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/tv_repository"
        app:layout_constraintTop_toTopOf="@id/tv_repository"
        app:srcCompat="@drawable/ic_outline_repository"
        android:contentDescription="@string/icon_repo" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextDetail.Info"
        android:layout_marginStart="26dp"
        android:layout_marginTop="0dp"
        android:paddingBottom="8dp"
        android:text="@string/repositories"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_follower_count"
        app:layout_constraintStart_toStartOf="@+id/iv_profile_pic" />

    <TextView
        style="@style/TextDetail.Info.Value"
        android:id="@+id/tv_detail_repository_count"
        android:layout_marginStart="6dp"
        android:paddingBottom="8dp"
        tools:text="9"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_repository"
        app:layout_constraintTop_toTopOf="@+id/tv_repository" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/favorite_button"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="243dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="299dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:minHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_3"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>